--- a/source/plugins/rss/examples.yml
+++ b/source/plugins/rss/examples.yml
@@ -1,5 +1,5 @@
 - name: News from hackernews
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.rss.svg
     token: NOT_NEEDED
