--- a/source/plugins/stackoverflow/examples.yml
+++ b/source/plugins/stackoverflow/examples.yml
@@ -1,5 +1,5 @@
 - name: Top answers from stackoverflow
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.stackoverflow.svg
     token: NOT_NEEDED
