--- a/source/plugins/stargazers/examples.yml
+++ b/source/plugins/stargazers/examples.yml
@@ -1,5 +1,5 @@
 - name: Using classic charts
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.stargazers.svg
     token: ${{ github.token }}
@@ -7,7 +7,7 @@
     plugin_stargazers: yes
 
 - name: Using graph charts
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.stargazers.graph.svg
     token: ${{ github.token }}
@@ -16,7 +16,7 @@
     plugin_stargazers_charts_type: graph
 
 - name: With worldmap
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.stargazers.worldmap.svg
     token: ${{ github.token }}
