--- a/source/plugins/base/examples.yml
+++ b/source/plugins/base/examples.yml
@@ -1,5 +1,5 @@
 - name: Default metrics
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.base.svg
     token: ${{ github.token }}
