--- a/source/plugins/contributors/examples.yml
+++ b/source/plugins/contributors/examples.yml
@@ -1,5 +1,5 @@
 - name: Contributors with contributions count
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.contributors.contributions.svg
     token: ${{ github.token }}
@@ -10,7 +10,7 @@
     plugin_contributors_contributions: yes
 
 - name: Contributors by categories
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.contributors.categories.svg
     token: ${{ github.token }}
