--- a/source/plugins/discussions/examples.yml
+++ b/source/plugins/discussions/examples.yml
@@ -1,5 +1,5 @@
 - name: GitHub Discussions
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.discussions.svg
     token: ${{ github.token }}
