--- a/source/plugins/isocalendar/examples.yml
+++ b/source/plugins/isocalendar/examples.yml
@@ -1,5 +1,5 @@
 - name: Half-year calendar
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.isocalendar.svg
     token: ${{ github.token }}
@@ -7,7 +7,7 @@
     plugin_isocalendar: yes
 
 - name: Full-year calendar
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.isocalendar.fullyear.svg
     token: ${{ github.token }}
