--- a/source/plugins/people/examples.yml
+++ b/source/plugins/people/examples.yml
@@ -1,5 +1,5 @@
 - name: Followers
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.people.followers.svg
     token: ${{ github.token }}
@@ -8,7 +8,7 @@
     plugin_people_types: followers
 
 - name: Contributors and sponsors
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.people.repository.svg
     token: ${{ github.token }}
