--- a/source/plugins/posts/examples.yml
+++ b/source/plugins/posts/examples.yml
@@ -1,5 +1,5 @@
 - name: Recent posts
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.posts.svg
     token: NOT_NEEDED
@@ -8,7 +8,7 @@
     plugin_posts_source: dev.to
 
 - name: Recent posts with descriptions and cover images
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.posts.full.svg
     token: NOT_NEEDED
