--- a/source/plugins/projects/examples.yml
+++ b/source/plugins/projects/examples.yml
@@ -1,5 +1,5 @@
 - name: Project from a repository
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.projects.svg
     token: ${{ github.token_WITH_SCOPES }}
