--- a/source/plugins/repositories/examples.yml
+++ b/source/plugins/repositories/examples.yml
@@ -1,5 +1,5 @@
 - name: Featured repositories
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.repositories.svg
     token: ${{ github.token }}
@@ -8,7 +8,7 @@
     plugin_repositories_featured: siosios/metrics
 
 - name: Pinned repositories
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.repositories.pinned.svg
     token: ${{ github.token }}
