--- a/source/plugins/starlists/examples.yml
+++ b/source/plugins/starlists/examples.yml
@@ -1,5 +1,5 @@
 - name: Featured star list
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.starlists.svg
     token: NOT_NEEDED
@@ -11,7 +11,7 @@
     timeout: 1800000
 
 - name: Featured star list languages
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.starlists.languages.svg
     token: NOT_NEEDED
