--- a/source/plugins/steam/examples.yml
+++ b/source/plugins/steam/examples.yml
@@ -1,5 +1,5 @@
 - name: Recently played games
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.steam.svg
     token: NOT_NEEDED
@@ -16,7 +16,7 @@
       use_mocked_data: yes
 
 - name: Profile and detailed game history
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.steam.full.svg
     token: NOT_NEEDED
