--- a/source/plugins/topics/examples.yml
+++ b/source/plugins/topics/examples.yml
@@ -1,5 +1,5 @@
 - name: Labels
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.topics.svg
     token: NOT_NEEDED
@@ -8,7 +8,7 @@
     plugin_topics_limit: 12
 
 - name: Icons
-  uses: siosios/metrics@latest
+  uses: siosios/metrics@master
   with:
     filename: metrics.plugin.topics.icons.svg
     token: NOT_NEEDED
