--- a/.github/workflows/spelling.yml
+++ b/.github/workflows/spelling.yml
@@ -14,6 +14,7 @@ jobs:
       contents: read
       pull-requests: read
       actions: read
+      packages: read
     outputs:
       followup: ${{ steps.spelling.outputs.followup }}
     runs-on: ubuntu-latest
@@ -40,7 +41,7 @@ jobs:
       id: spelling
       uses: ./
       with:
-        token: ${{ secrets.METRICS_TOKEN }}
+        token: ${{ github.token }}
         experimental_apply_changes_via_bot: 1
         suppress_push_for_open_pull_request: 1
         check_file_names: 1
