--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -119,7 +119,7 @@ jobs:
 
   # Test siosios/metrics@master
   action-master-test:
-    name: Test siosios/metrics@master
+    name: Test metrics@master
     runs-on: self-hosted
     needs: [ docker-master ]
     steps:
@@ -140,17 +140,7 @@ jobs:
     uses: siosios/metrics/.github/workflows/examples.yml@master
     secrets:
       METRICS_TOKEN: ${{ github.token }}
-      METRICS_TOKEN_PERSONAL: ${{ secrets.METRICS_TOKEN_PERSONAL }}
-      CHESS_TOKEN: ${{ secrets.CHESS_TOKEN }}
-      PAGESPEED_TOKEN: ${{ secrets.PAGESPEED_TOKEN }}
-      GOOGLE_MAP_TOKEN: ${{ secrets.GOOGLE_MAP_TOKEN }}
-      SPLATOON_TOKEN: ${{ secrets.SPLATOON_TOKEN }}
-      SPLATOON_STATINK_TOKEN: ${{ secrets.SPLATOON_STATINK_TOKEN }}
-      SIXTEEN_PERSONALITIES_URL: ${{ secrets.SIXTEEN_PERSONALITIES_URL }}
-      SPOTIFY_TOKENS: ${{ secrets.SPOTIFY_TOKENS }}
-      STOCK_TOKEN: ${{ secrets.STOCK_TOKEN }}
-      TWITTER_TOKEN: ${{ secrets.TWITTER_TOKEN }}
-      WAKATIME_TOKEN: ${{ secrets.WAKATIME_TOKEN }}
+
       
   # Publish examples (presets)
   publish-examples-presets:
